# playerdatapy

./: .gitignore  .releaserc.json  404.html  CLAUDE.md  CODEOWNERS  README.md  example_direct.py  example_pydantic.py  gen_schema.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  schema.graphql  sitemap.xml
.github/workflows/: ci.yml  codegen.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
api/: index.html
api/overview/: index.html
auth/: index.html
clients/: index.html
codegen_plugins/: docstrings.py  public_api.py
concepts/: index.html
docs/: api.md  auth.md  clients.md  concepts.md  errors.md  examples.md  faq.md  gen_ref.py  index.md  limits.md  metrics.md  quickstart.md
docs/api/: overview.md
docs/python/: index.md
docs/stylesheets/: extra.css
errors/: index.html
examples/: index.html
examples/direct/: README.md  example_use.ipynb  quick_start.py  raw_data_query.py  sessions_query.py
examples/direct/ball/: raw_data_example.py
examples/direct/queries/: club_sessions_filtered_by_time_range.graphql
examples/oauth2_consent_demo/: example_flow.py
examples/pydantic/: README.md  example_use.ipynb  quick_start.py  raw_data_query.py  sessions_query.py
examples/pydantic/ball/: raw_data_example.py
examples/pydantic/queries/: club_sessions.py  club_sessions_filtered_by_time_range.py  session_ball_data.py  session_details.py  session_metrics.py  session_participations_urls.py
examples/pydantic/raw_data_utils/: url_to_csv.py
examples/raw_data_utils/: url_to_csv.py
faq/: index.html
limits/: index.html
metrics/: index.html
playerdatapy/: __init__.py  async_base_client.py  constants.py  custom_fields.py  custom_mutations.py  custom_queries.py  custom_typing_fields.py  enums.py  gqlauth.py  gqlclient.py  input_types.py  playerdata_api.py
playerdatapy/auth/: authorisation_code_flow.py  authorisation_code_flow_base.py  authorisation_code_flow_pcke.py  base_flow.py  callback_handler.py  client_credentials_flow.py  configuration.py  server.py  token_storage.py
python/: index.html
quickstart/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/authentication/: index.html
reference/authentication/AuthenticationType/: index.html
reference/authentication/GraphqlAuth/: index.html
reference/enums/: index.html
reference/enums/ActiveFirmwareBoardName/: index.html
reference/enums/AggFuncEnum/: index.html
reference/enums/AppAuthenticationFlow/: index.html
reference/enums/AppMessageTypeEnum/: index.html
reference/enums/BulkActionEnum/: index.html
reference/enums/BulkActionableTypeEnum/: index.html
reference/enums/BulkOperationRowStatusEnum/: index.html
reference/enums/BulkOperationStatusEnum/: index.html
reference/enums/CallSiteEnum/: index.html
reference/enums/ChartDataTypeEnum/: index.html
reference/enums/ChartTypeEnum/: index.html
reference/enums/ClipTeam/: index.html
reference/enums/ClubSport/: index.html
reference/enums/ConfiguredMetricListTypeEnum/: index.html
reference/enums/CreatorTypeEnum/: index.html
reference/exceptions/: index.html
reference/fields/: index.html
reference/graphql-client/: index.html
reference/input-types/: index.html
reference/mutations/: index.html
reference/playerdataapi/: index.html
reference/queries/: index.html
schema/: index.html
schema/SUMMARY/: index.html
schema/enums/: index.html
schema/inputs/: index.html
schema/interfaces/: index.html
schema/mutations/: index.html
schema/objects/: index.html
schema/queries/: index.html
schema/scalars/: index.html
schema/unions/: index.html
scripts/: fetch_schema.py  fix_imports.py  fixup.py  get_auth_token.py
search/: search_index.json
stylesheets/: extra.css
tests/: test_gqlauth.py  test_playerdata_api.py  test_public_exports.py  test_video_fragment_signed_urls.py
tests/auth/: test_authorisation_code_flow.py  test_authorisation_code_flow_base.py  test_authorisation_code_flow_pcke.py  test_base_flow.py  test_client_credentials_flow.py
(+1382 files in other folders)
