[project]
name = "playerdatapy"
version = "0.1.0"
description = "Python client for the PlayerData GraphQL API"
authors = [{ name = "PlayerData Engineering", email = "dev@playerdata.com" }]
classifiers = ["Private :: Do Not Upload"]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "argparse>=1.4.0",
    "ariadne-codegen>=0.17.0",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pyproject-autoflake>=1.0.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "requests-oauthlib>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
keyring-provider = "subprocess"

[tool.autoflake]
check = false
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
ignore-init-module-imports = true

[tool.ariadne-codegen]
remote_schema_url = "https://app.playerdata.co.uk/api/graphql"
target_package_name = "playerdatapy"
enable_custom_operations = true
client_file_name = "gqlclient"
client_class_name = "GraphqlClient"
remote_schema_headers = {"Authorization" = "$AUTH_TOKEN"}
