[project]
name = "playerdatapy"
version = "0.1.0"
description = "Python client for the PlayerData GraphQL API"
authors = [{ name = "PlayerData Engineering", email = "dev@playerdata.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "graphql-core>=3.2.0",
    "httpx>=0.24.0",
    "oauthlib>=3.2.0",
    "polars>=1.37.1",
    "pydantic>=2.0.0",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
codegen = [
    "ariadne-codegen>=0.17.2",
]
test = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["playerdatapy"]

[tool.autoflake]
check = false
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
ignore-init-module-imports = true

[tool.ariadne-codegen]
schema_path = "schema.graphql"
target_package_name = "playerdatapy"
enable_custom_operations = true
client_file_name = "gqlclient"
client_class_name = "GraphqlClient"

[tool.ruff.lint]
ignore = ["F405", "F403"]
