[project]
name = "playerdatapy"
version = "0.1.0"
description = "Python client for the PlayerData GraphQL API"
authors = [{ name = "PlayerData Engineering", email = "dev@playerdata.com" }]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "graphql-core>=3.2.0",
    "httpx>=0.24.0",
    "oauthlib>=3.2.0",
    "polars>=1.37.1",
    "pydantic>=2.0.0",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
codegen = [
    "ariadne-codegen>=0.17.2",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "griffe-pydantic>=1.0.0",
    "ruff>=0.15.1",
]
test = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["playerdatapy"]

[tool.autoflake]
check = false
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
ignore-init-module-imports = true

[tool.ariadne-codegen]
schema_path = "schema.graphql"
target_package_name = "playerdatapy"
enable_custom_operations = true
client_file_name = "gqlclient"
client_class_name = "GraphqlClient"
plugins = ["codegen_plugins.docstrings.EnumDocstringsPlugin"]

[tool.ruff.lint]
ignore = ["F405", "F403"]

# Ariadne Codegen doesn't produce ruff lint compliant code :(
exclude = [
    "playerdatapy/custom_queries.py",
    "playerdatapy/custom_mutations.py",
    "playerdatapy/custom_fields.py",
]